syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "Common.proto";
import "VRRemote.proto";

package RemoteSystem.Remote;

option csharp_namespace = "RemoteSystem.Proto";

service Remote
{
    rpc GetMacAddress (google.protobuf.Empty) returns (MessageMacAddress);
	rpc GetHeartBeat (google.protobuf.Empty) returns (HeartBeat);
	rpc GetPerformance (google.protobuf.Empty) returns (Performance);
	rpc PostComputerControlMessage (ComputerControl) returns (MessageResult);
	rpc PostProgramControlMessage (ProgramControl) returns (MessageResult);
	rpc PostVRControlMessage (VRControl) returns (MessageResult);
}

message MessageMacAddress
{
	repeated string macAddresses = 1;
}

message ComputerControl
{
	enum ComputerControlType {
		COMPUTER_START = 0;
		COMPUTER_RESTART = 1;
		COMPUTER_STOP = 2;
		MOBILE_HOTSPOT_START = 3;
		MOBILE_HOTSPOT_STOP = 4;
		CHECK_MOBILE_HOTSPOT_STATUS = 5;
	}
	ComputerControlType control = 1;
}

message ComputerStatus
{
}

message ProgramControl
{
	enum ProgramControlType {
		START = 0;
		STOP = 1;
		CHECK = 2;
	}
	string name = 1;
	string fileName = 2;
	string processName = 3;
	ProgramControlType control = 4;
}

message HeartBeat
{
	string Timestamp = 1;
	string Message = 2;
}

message Performance
{
	float CpuUsage = 1;
	float MemoryUsage = 2;
	float NetworkUsage = 3;
	float GpuUsage = 4;
}

//message Program
//{
//	string program_name = 1;
//}

//message Person 
//{
//  string name = 1;
//  int32 id = 2;  // Unique ID number for this person.
//  string email = 3;

//  enum PhoneType {
//    MOBILE = 0;
//    HOME = 1;
//    WORK = 2;
//  }

//  message PhoneNumber {
//    string number = 1;
//    PhoneType type = 2;
//  }

//  repeated PhoneNumber phones = 4;

//  google.protobuf.Timestamp last_updated = 5;
//}


//syntax = "proto3";

//option csharp_namespace = "RemoteSystem.Remote";

//package greet;

// The greeting service definition.
//service Greeter {
  // Sends a greeting
//  rpc SayHello (HelloRequest) returns (HelloReply);
//}

// The request message containing the user's name.
//message HelloRequest {
//  string name = 1;
//}

// The response message containing the greetings.
//message HelloReply {
//  string message = 1;
//}

//syntax = "proto3";

//import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";

//option csharp_namespace = "RemoteSystem.Protobuf";

//message Person
//{
//  string name = 1;
//int32 id = 2;  // Unique ID number for this person.
//  string email = 3;

//  enum PhoneType
//{
//    MOBILE = 0;
//    HOME = 1;
//    WORK = 2;
//}

//message PhoneNumber
//{
//    string number = 1;
//    PhoneType type = 2;
//}

//repeated PhoneNumber phones = 4;

//google.protobuf.Timestamp last_updated = 5;
//}
